--- a/GISDES/GISDES/Views/Evento/Index.cshtml
+++ b/GISDES/GISDES/Views/Evento/Index.cshtml
@@ -55,7 +55,7 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "Modificar", new { id=item.Id }) |
-            @Html.ActionLink("Borrar", "Delete", new { id=item.Id })
+            @Html.ActionLink("Borrar", "Eliminar", new { id=item.Id })
         </td>
     </tr>
 }
