--- a/GISDES/GISDES/Views/Shared/_Layout.cshtml
+++ b/GISDES/GISDES/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Grupos de investigacion", "Index", "Home")</li>
                             <li>@Html.ActionLink("Semillero de investigacion", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Estudiantes", "Index", "Estudiantes")</li>
+                            <li>@Html.ActionLink("Estudiantes", "Index", "Estudiante")</li>
 
                             <li>@Html.ActionLink("Profesor", "Index", "Profesor")</li>
                             <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
